<resources>
    <string name="app_name">Contacts Project</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="add">ADD</string>
    <string name="find">FIND</string>
    <string name="desc">DESC</string>
    <string name="asc">ASC</string>
    <string name="contact_id">Contact ID</string>
    <string name="todo" />
</resources>