<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_id"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ContactID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_assigned"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="none"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_phone"
                android:inputType="number"
                android:textSize="20sp"
                tools:ignore="TextFields" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/add"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/findButton"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/find"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/ascButton"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/asc"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/descButton"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/desc"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/info_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />

</LinearLayout>